--- a/index.html
+++ b/index.html
@@ -85,3 +85,7 @@
   </div>
   <iframe class="edge-browser" src="https://www.google.com/search?igu=1" frameborder="0" width="100%" height="100%"></iframe>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+<script src="script.js"></script>
