--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   </div>
 </div>
 <div class="id-edge app minimized">
-  <div class="toolbar draggable">
-    <div class="tab"><i class="fa fa-list-alt"> </i><span>Start</span><i class="fa fa-times"></i></div>
+  <div class="toolbar draggable" class="full screen">
+    <div class="full screen" + class="tab"><i class="fa fa-list-alt"> </i><span>Start</span><i class="fa fa-times"></i></div>
   </div>
   <div class="addressbar draggable"><i class="fa fa-arrow-left"></i><i class="fa fa-arrow-right"></i><i class="fa fa-refresh"></i><span class="divider"></span>
     <input class="edge-url" value="https://google.com"/>
