--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" />
 <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<div class="desktop"></div>
+<div class="desktop">
+  <container>
+    <img src="https://th.bing.com/th/id/R.9e6ded3691e1f0e025f78619a748e10c?rik=OhclzPlJ1J%2bFgQ&riu=http%3a%2f%2fwww.rw-designer.com%2ficon-image%2f23400-256x256x32.png&ehk=c24d1TG9u5N9rfyqTo%2bzU4fInLx%2bjZUR8ofDlM28mIQ%3d&risl=&pid=ImgRaw&r=0">
+  </container>
+</div>
 <div class="taskbar">
   <div class="programs">
     <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa-windows"></i></div>
