--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <div class="desktop">
   <container>
-    <img src="https://th.bing.com/th/id/R.9e6ded3691e1f0e025f78619a748e10c?rik=OhclzPlJ1J%2bFgQ&riu=http%3a%2f%2fwww.rw-designer.com%2ficon-image%2f23400-256x256x32.png&ehk=c24d1TG9u5N9rfyqTo%2bzU4fInLx%2bjZUR8ofDlM28mIQ%3d&risl=&pid=ImgRaw&r=0">
-  </container>
+    <img src="https://th.bing.com/th/id/R.9e6ded3691e1f0e025f78619a748e10c?rik=OhclzPlJ1J%2bFgQ&riu=http%3a%2f%2fwww.rw-designer.com%2ficon-image%2f23400-256x256x32.png&ehk=c24d1TG9u5N9rfyqTo%2bzU4fInLx%2bjZUR8ofDlM28mIQ%3d&risl=&pid=ImgRaw&r=0" style="width:50px; height:50px;">
+      <img src="" style="width:50px; height:50px;">
+      <img src="" style="width:50px; height:50px;">
+      <img src="" style="width:50px; height:50px;">
+      <img src="" style="width:50px; height:50px;">
+      <img src="" style="width:50px; height:50px;">
+      <img src="" style="width:50px; height:50px;">
+</container>
 </div>
 <div class="taskbar">
   <div class="programs">
