--- a/index.html
+++ b/index.html
@@ -36,6 +36,44 @@
     </div>
     <div class="icon application skype" data-target="#skype"><i class="fa fa-skype"></i></div>
   </div>
+  <div class="dockbg"></div>
+<div class="dock">
+    <img src="https://assets.codepen.io/237800/Google_Chrome_icon_2011.png">
+    <img src="https://th.bing.com/th/id/R.3b6d40c4573dead4abac75927bc72462?rik=VPt3oW%2fm7%2fhgBw&riu=http%3a%2f%2fnewosxbook.com%2fimages%2fdock.png&ehk=NGC5%2fRY%2fQG1zDU7vJf9cY5KOcVUzve65s6YL7NSwXXI%3d&risl=&pid=ImgRaw&r=0">
+</div>
+<style>
+.dockbg {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 35px;
+    background: #bbb;
+}
+
+.dock {
+    position: fixed;
+    text-align: center;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+    height: 100px;
+    line-height: 100px;
+}
+
+.dock img {
+    display: inline-block;
+    vertical-align: bottom;
+    height: 50%;
+    padding: 0 5px;
+    /* + your animation properties */
+}
+
+
+.dock img:hover {
+    height: 100%;
+}
+</style>
   <div class="tray">
     <div class="ico more-icons">
       <div class="all-icons"><i class="fa fa-bluetooth" title="Bluetooth Devices"></i><i class="fa fa-cloud" title="OneDrive up to date"></i><i class="fa fa-envelope" title="You have new unread e-mail messages"></i><i class="fa fa-flag" title="Windows Defender requires attention"></i><i class="fa fa-keyboard-o" title="Keyboard En-NZ"></i><i class="fa fa-shield" title="Your computer is protected"></i><i class="fa fa-wifi" title="Internet Access"></i><i class="fa fa-dropbox" title="Dropbox Synced"></i></div>
