--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="dockbg"></div>
 <div class="dock">
     <img src="https://assets.codepen.io/237800/Google_Chrome_icon_2011.png">
-    <img src="https://th.bing.com/th/id/R.3b6d40c4573dead4abac75927bc72462?rik=VPt3oW%2fm7%2fhgBw&riu=http%3a%2f%2fnewosxbook.com%2fimages%2fdock.png&ehk=NGC5%2fRY%2fQG1zDU7vJf9cY5KOcVUzve65s6YL7NSwXXI%3d&risl=&pid=ImgRaw&r=0">
+    <img src="">
 </div>
 <style>
 .dockbg {
@@ -59,6 +59,7 @@
     right: 0;
     height: 100px;
     line-height: 100px;
+    background-image: url("https://th.bing.com/th/id/R.3b6d40c4573dead4abac75927bc72462?rik=VPt3oW%2fm7%2fhgBw&riu=http%3a%2f%2fnewosxbook.com%2fimages%2fdock.png&ehk=NGC5%2fRY%2fQG1zDU7vJf9cY5KOcVUzve65s6YL7NSwXXI%3d&risl=&pid=ImgRaw&r=0");
 }
 
 .dock img {
