--- a/index.html
+++ b/index.html
@@ -27,58 +27,19 @@
 </div>
 <div class="taskbar">
   <div class="programs">
-    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa-windows"></i></div>
-    <div class="icon cortana" title="Ask me anything" data-target="#cortana"><i class="fa fa-circle-o"></i></div>
+    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa-android"></i></div>
+    <div class="icon google" title="Say hey Google" data-target="#cortana"><i class="fa fa-google"></i></div>
     <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
         <div class="content"></div>
-      </div><i class="fa fa-edge"></i>
+      </div><i class="fa fa-chrome"></i>
     </div>
     <div class="icon application skype" data-target="#skype"><i class="fa fa-skype"></i></div>
   </div>
-  <div class="dockbg"></div>
-<div class="dock">
-    <img src="https://assets.codepen.io/237800/Google_Chrome_icon_2011.png">
-    <img src="">
 </div>
-<style>
-.dockbg {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 35px;
-    background: #bbb;
-}
-
-.dock {
-    position: fixed;
-    text-align: center;
-    bottom: 5px;
-    left: 0;
-    right: 0;
-    height: 100px;
-    line-height: 100px;
-    background-image: url("https://th.bing.com/th/id/R.3b6d40c4573dead4abac75927bc72462?rik=VPt3oW%2fm7%2fhgBw&riu=http%3a%2f%2fnewosxbook.com%2fimages%2fdock.png&ehk=NGC5%2fRY%2fQG1zDU7vJf9cY5KOcVUzve65s6YL7NSwXXI%3d&risl=&pid=ImgRaw&r=0");
-
-}
-
-.dock img {
-    display: inline-block;
-    vertical-align: bottom;
-    height: 50%;
-    padding: 0 5px;
-    /* + your animation properties */
-}
-
-
-.dock img:hover {
-    height: 100%;
-}
-</style>
   <div class="tray">
     <div class="ico more-icons">
-      <div class="all-icons"><i class="fa fa-bluetooth" title="Bluetooth Devices"></i><i class="fa fa-cloud" title="OneDrive up to date"></i><i class="fa fa-envelope" title="You have new unread e-mail messages"></i><i class="fa fa-flag" title="Windows Defender requires attention"></i><i class="fa fa-keyboard-o" title="Keyboard En-NZ"></i><i class="fa fa-shield" title="Your computer is protected"></i><i class="fa fa-wifi" title="Internet Access"></i><i class="fa fa-dropbox" title="Dropbox Synced"></i></div>
+      <div class="all-icons"><i class="fa fa-bluetooth" title="Bluetooth Devices"></i><i class="fa fa-cloud" title="OneDrive up to date"></i><i class="fa fa-envelope" title="You have new unread e-mail messages"></i><i class="fa fa-flag" title="Android Defender requires attention"></i><i class="fa fa-wifi" title="Keyboard En-NZ"></i><i class="fa fa-shield" title="Your computer is protected"></i><i class="fa fa-wifi" title="Internet Access"></i><i class="fa fa-dropbox" title="Dropbox Synced"></i></div>
       <div class="fa fa-chevron-up" title="Show hidden icons"></div>
     </div>
     <div class="ico" title="Speakers: 80%"><i class="fa fa-volume-up"></i></div>
@@ -94,10 +55,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col icons">
-          <div class="icon top bars" title="Expand"><i class="fa fa-bars"></i><span class="start">start</span></div>
+          <div class="icon top bars" title="Expand"><i class="fa fa-bars"></i><span class="start"></span></div>
           <div class="bottom">
-            <div class="icon profile" title="Amanda Ashley"><a href="http://creativecollective.studio/" target="_blank"><img class="img-responsive" src="http://rodneyrainbow.co.nz/media/UserAvatars/9a594d7d957f920777cfb383177a82f4ea065504.png?width=60&amp;height=60&amp;mode=crop"/></a><span>Andrew Ashley</span></div>
-            <div class="icon file-explorer" title="File Explorer"><i class="fa fa-folder"></i><span>File Explorer</span></div>
+            <div class="icon profile" title="Amanda Ashley"><a href="http://android.com" target="_blank"><img class="img-responsive" src="http://rodneyrainbow.co.nz/media/UserAvatars/9a594d7d957f920777cfb383177a82f4ea065504.png?width=60&amp;height=60&amp;mode=crop"/></a><span>Andrew Ashley</span></div>
+            <div class="icon file-explorer" title="File Explorer"><i class="fa fa-folder"></i><span>Files</span></div>
             <div class="icon settings" title="Settings"><i class="fa fa-cog"></i><span>Settings</span></div>
             <div class="icon power" title="Power"><i class="fa fa-power-off"></i><span>Power</span></div>
           </div>
@@ -105,7 +66,7 @@
         <div class="col-xs-4 col-xs-offset-2 programs">
           <p class="title">Recently added</p>
           <div class="item"><i class="fa fa-skype"></i><span>Skype</span></div>
-          <div class="item"><i class="fa fa-file-excel-o"></i><span>Excel</span></div>
+          <div class="item"><i class="fa fa-file-google"></i><span>Google</span></div>
           <p class="title">Most used</p>
           <div class="item"><i class="fa fa-chrome"></i><span>Google Chrome</span></div>
           <div class="item"><i class="fa fa-firefox"></i><span>Mozilla Firefox</span></div>
@@ -113,7 +74,7 @@
         <div class="col-xs-6 tiles">
           <p class="title">Life at a glance
             <div class="tile wide"><i class="fa fa-calendar"></i><span>Calendar</span></div>
-            <div class="tile medium"><i class="fa fa-file-pdf-o"></i><span>Adobe Acrobat</span></div>
+            <div class="tile medium"><i class="fa fa-cog"></i><span>Settings</span></div>
             <div class="tile medium photos"><span>Photos<i class="fa fa-picture-o"></i></span></div>
             <div class="tile medium twitter"><span>Twitter<i class="fa fa-twitter"></i></span></div>
             <div class="tile medium"><i class="fa fa-envelope"></i><span>Mail</span></div>
