--- a/AndroidOS.html
+++ b/AndroidOS.html
@@ -6,4 +6,5 @@
               <div class="fa fa-calendar" style="width:65px; height:65px;">
                  <div class="fa fa-youtube" style="width:65px; height:65px;">
                     <div class="fa fa-camera" style="width:65px; height:65px;">
+                        <div class="fa fa-computer" style="width:65px; height:65px;"> <a href="PC.html"></div>
 </container>
