--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <container>
-  <div class="fa fa-chrome" style="width:65px; height:65px;">
-     <div class="fa fa-google" style="width:65px; height:65px;">
-        <div class="fa fa-cog" style="width:65px; height:65px;">
-           <div class="fa fa-calculator" style="width:65px; height:65px;">
-              <div class="fa fa-calendar" style="width:65px; height:65px;">
-                 <div class="fa fa-youtube" style="width:65px; height:65px;">
-                    <div class="fa fa-camera" style="width:65px; height:65px;">
+  <div class="apps">
+   <div class="fa fa-chrome" style="width:65px; height:65px;"></div>
+     <div class="fa fa-google" style="width:65px; height:65px;"></div>
+        <div class="fa fa-cog" style="width:65px; height:65px;"></div>
+           <div class="fa fa-calculator" style="width:65px; height:65px;"></div>
+              <div class="fa fa-calendar" style="width:65px; height:65px;"></div>
+                 <div class="fa fa-youtube" style="width:65px; height:65px;"></div>
+                    <div class="fa fa-camera" style="width:65px; height:65px;"></div>
                         <div class="fa fa-computer" style="width:65px; height:65px;"> <a href="PC.html"></div>
+  </div>
 </container>
+<style>
+  .apps {
+  background-image: url("https://cdn.wallpapersafari.com/23/55/iro6Wy.jpg");
+</style>
+  
