--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-  <div class="apps">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+<div class="apps">
    <div class="fa fa-chrome" style="width:65px; height:65px;"></div>
      <div class="fa fa-google" style="width:65px; height:65px;"></div>
         <div class="fa fa-cog" style="width:65px; height:65px;"></div>
