--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body class="bg">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
    <div class="fa fa-chrome" style="width:65px; height:65px;"></div>
      <div class="fa fa-google" style="width:65px; height:65px;"></div>
@@ -7,7 +8,7 @@
                  <div class="fa fa-youtube" style="width:65px; height:65px;"></div>
                     <div class="fa fa-camera" style="width:65px; height:65px;"></div>
                         <div class="fa fa-computer" style="width:65px; height:65px;"> <a href="PC.html"></div>
-<div class="bg"></div>
+
 <style>
   .bg {
   background-image: url("https://cdn.wallpapersafari.com/23/55/iro6Wy.jpg");
