--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body class="bg">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
    <div class="fa fa-chrome" style="width:65px; height:65px;"></div>
-     <div class="fa fa-android" style="width:65px; height:65px;"><a href="PC.html"></div>
+     <div class="fa fa-android" style="width:65px; height:65px;"><a href="PC.html"></a></div>
    <p>Android PC</p>
         <div class="fa fa-cog" style="width:65px; height:65px;"></div>
            <div class="fa fa-calculator" style="width:65px; height:65px;"></div>
