--- a/PC.html
+++ b/PC.html
@@ -97,6 +97,50 @@
   <iframe class="edge-browser" src="https://www.google.com/search?igu=1" frameborder="0" width="100%" height="100%"></iframe>
 </div>
 
+<div class="dockbg"></div>
+<div class="dock">
+    <img src="foo.png">
+    <img src="bar.png">
+</div>
+
+<style>
+  .dockbg {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 35px;
+    background: #bbb;
+}
+
+.dock {
+    position: bottom center;
+    text-align: center;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+    height: 100px;
+    line-height: 100px;
+    background: url("https://th.bing.com/th/id/R.3b6d40c4573dead4abac75927bc72462?rik=VPt3oW%2fm7%2fhgBw&riu=http%3a%2f%2fnewosxbook.com%2fimages%2fdock.png&ehk=NGC5%2fRY%2fQG1zDU7vJf9cY5KOcVUzve65s6YL7NSwXXI%3d&risl=&pid=ImgRaw&r=0");
+    background-repeat: no-repeat;
+}
+
+.dock img {
+    display: inline-block;
+    vertical-align: bottom;
+    height: 50%;
+    padding: 0 5px;
+    /* + your animation properties */
+}
+
+
+.dock img:hover {
+    height: 100%;
+}
+</style>
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
 <script src="script.js"></script>
