--- a/PC.html
+++ b/PC.html
@@ -9,6 +9,7 @@
 <!-- Want to add in other taskbar functions - working volume etc. And also a restart / start / shutdown animation when I can find the time.-->
 <!-- #Start menu scroll bar not as nice in Firefox / IE - use chrome where possible-->
 <!---->
+<link rel="stylesheet" src="style.css">
 <div class="desktop"></div>
 <div class="taskbar">
   <div class="programs">
