--- a/PC.html
+++ b/PC.html
@@ -27,12 +27,12 @@
 </div>
 <div class="taskbar">
   <div class="programs">
-    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa-windows"></i></div>
-    <div class="icon cortana" title="Ask me anything" data-target="#cortana"><i class="fa fa-circle-o"></i></div>
+    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa-android"></i></div>
+    <div class="icon cortana" title="Say Hey Google" data-target="#cortana"><i class="fa fa-google"></i></div>
     <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
         <div class="content"></div>
-      </div><i class="fa fa-edge"></i>
+      </div><i class="fa fa-chrome"></i>
     </div>
     <div class="icon application skype" data-target="#skype"><i class="fa fa-skype"></i></div>
   </div>
@@ -91,9 +91,9 @@
     <div class="tab"><i class="fa fa-list-alt"> </i><span>Start</span><i class="fa fa-times"></i></div>
   </div>
   <div class="addressbar draggable"><i class="fa fa-arrow-left"></i><i class="fa fa-arrow-right"></i><i class="fa fa-refresh"></i><span class="divider"></span>
-    <input class="edge-url" value="creativecollective.studio/"/>
+    <input class="edge-url" value="https://www.google.com"/>
   </div>
-  <iframe class="edge-browser" src="http://creativecollective.studio/" frameborder="0" width="100%" height="100%"></iframe>
+  <iframe class="edge-browser" src="https://browser.rammer.org" frameborder="0" width="100%" height="100%"></iframe>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
