--- a/PC.html
+++ b/PC.html
@@ -93,7 +93,7 @@
   <div class="addressbar draggable"><i class="fa fa-arrow-left"></i><i class="fa fa-arrow-right"></i><i class="fa fa-refresh"></i><span class="divider"></span>
     <input class="edge-url" value="https://www.google.com"/>
   </div>
-  <iframe class="edge-browser" src="https://browser.rammer.org" frameborder="0" width="100%" height="100%"></iframe>
+  <iframe class="edge-browser" src="https://browser.rammerhead.org" frameborder="0" width="100%" height="100%"></iframe>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
