--- a/PC.html
+++ b/PC.html
@@ -94,6 +94,19 @@
     <input class="edge-url" value="https://www.google.com"/>
   </div>
   <iframe class="edge-browser" src="https://browser.rammerhead.org" frameborder="0" width="100%" height="100%"></iframe>
+  <script src="https://www.browserling.com/js/liveapi_v1.js"></script>
+
+<script>
+var browserling = new BrowserlingIframe({
+    session: "Pt1MXZ9cSJt+Nk5JOpmVG/GwPxktcScKw...",
+    platform: "win/10",
+    browser: "chrome/127",
+    url: "https://www.google.com"
+});
+
+var div = document.querySelector('#browserling');
+div.appendChild(browserling.iframe());
+</script>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
