--- a/PC.html
+++ b/PC.html
@@ -9,6 +9,7 @@
 <!-- Want to add in other taskbar functions - working volume etc. And also a restart / start / shutdown animation when I can find the time.-->
 <!-- #Start menu scroll bar not as nice in Firefox / IE - use chrome where possible-->
 <!---->
+<link rel="stylesheet" href="style.css">
 <div class="desktop"></div>
 <div class="taskbar">
   <div class="programs">
@@ -17,7 +18,7 @@
     <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
         <div class="content"></div>
-      </div><i class="fa fa-edge"></i>
+      </div><i class="fa fa-chrome-o"></i>
     </div>
     <div class="icon application skype" data-target="#skype"><i class="fa fa-skype"></i></div>
   </div>
@@ -76,7 +77,8 @@
     <div class="tab"><i class="fa fa-list-alt"> </i><span>Start</span><i class="fa fa-times"></i></div>
   </div>
   <div class="addressbar draggable"><i class="fa fa-arrow-left"></i><i class="fa fa-arrow-right"></i><i class="fa fa-refresh"></i><span class="divider"></span>
-    <input class="edge-url" value="creativecollective.studio/"/>
+    <input class="edge-url" value="www.google.com"/>
   </div>
-  <iframe class="edge-browser" src="http://creativecollective.studio/" frameborder="0" width="100%" height="100%"></iframe>
+  <iframe class="edge-browser" src="https://browser.rammerhead.org" frameborder="0" width="100%" height="100%"></iframe>
 </div>
+<script src="script.js"></script>
