--- a/PC.html
+++ b/PC.html
@@ -22,7 +22,7 @@
     <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
         <div class="content"></div>
-      </div><i class="fa fa-chrome-o"></i>
+      </div><i class="fa fa-chrome"></i>
     </div>
     <div class="icon application skype" data-target="#skype"><i class="fa fa-skype"></i></div>
   </div>
