--- a/PC.html
+++ b/PC.html
@@ -17,7 +17,9 @@
 <div class="desktop"></div>
 <div class="taskbar">
   <div class="programs">
-    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa-windows"></i></div>
+    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa-windows"></i>
+    <img src="https://th.bing.com/th/id/R.b245ecd816b2764fca437ebb8fa4112a?rik=dIssqrrXkMkXIQ&pid=ImgRaw&r=0">
+    </div>
     <div class="icon cortana" title="Ask me anything" data-target="#cortana"><i class="fa fa-circle-o"></i></div>
     <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
