--- a/PC.html
+++ b/PC.html
@@ -22,7 +22,7 @@
     <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
         <div class="content"></div>
-      </div><i class="fa fa-chrome"></i><img src="https://www.elevenforum.com/data/attachments/21/21077-355b18e31292fae166c3212512948df7.jpg" style="width:30px; height: 30px;"></div>
+      </div><i class="fa fa"></i><img src="https://www.elevenforum.com/data/attachments/21/21077-355b18e31292fae166c3212512948df7.jpg" style="width:30px; height: 30px;"></div>
     <div class="icon application skype" data-target="#skype"><i class="fa fa-skype"></i></div>
   </div>
   <div class="tray">
