--- a/PC.html
+++ b/PC.html
@@ -18,7 +18,9 @@
 <div class="taskbar">
   <div class="programs">
     <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa"></i><img src="https://th.bing.com/th/id/R.b245ecd816b2764fca437ebb8fa4112a?rik=dIssqrrXkMkXIQ&pid=ImgRaw&r=0" style="width:30px; height: 30px;"></div>
-    <div class="icon cortana" title="Ask me anything" data-target="#cortana"><i class="fa fa-circle-o"></i></div>
+    <div class="icon application minimized settings" data-target=".id-settings">
+      <div class="app-preview preview-settings">
+    <div class="icon cortana" title="Settings" data-target="#cortana"><i class="fa fa"></i><img src="https://www.elevenforum.com/data/attachments/17/17787-2e9399435abda183d7db56e1855f21b3.jpg" style="width:30px; height: 30px;"></div></div>
     <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
         <div class="content"></div>
@@ -84,6 +86,18 @@
   </div>
   <iframe class="edge-browser" src="https://browser.rammerhead.org" frameborder="0" width="100%" height="100%"></iframe>
 </div>
+
+<div class="id-settings app minimized">
+  <div class="toolbar draggable">
+    <div class="tab"><i class="fa fa-list-alt"> </i><span></span><i class="fa fa-times"></i>Settings</div>
+  </div>
+  <div class="addressbar draggable"><i class="fa fa-cog"></i><i class="fa fa-"></i><i class="fa fa"></i><span class="divider"></span>
+    <input class="edge-url" value=""/>
+  </div>
+  <iframe class="edge-browser" src="" frameborder="0" width="100%" height="100%"></iframe>
+</div>
+
+  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
 <script src="script.js"></script>
