--- a/PC.html
+++ b/PC.html
@@ -21,7 +21,8 @@
     <div class="icon application minimized settings" data-target=".id-settings">
       <div class="app-preview preview-settings">
     <div class="icon cortana" title="Settings" data-target="#cortana"><i class="fa fa"></i><img src="https://www.elevenforum.com/data/attachments/17/17787-2e9399435abda183d7db56e1855f21b3.jpg" style="width:30px; height: 30px;"></div></div>
-    <div class="icon application minimized edge" data-target=".id-edge">
+    </div>
+      <div class="icon application minimized edge" data-target=".id-edge">
       <div class="app-preview preview-edge">
         <div class="content"></div>
       </div><i class="fa fa"></i><img src="https://www.elevenforum.com/data/attachments/21/21077-355b18e31292fae166c3212512948df7.jpg" style="width:30px; height: 30px;"></div>
