--- a/settings.html
+++ b/settings.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="style.css">
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">Desktop</a>
+  <a href="#">Start</a>
+  <a href="#">Account</a>
   <a href="#"></a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
 </div>
 
 <!-- Use any element to open the sidenav -->
