--- a/PC.html
+++ b/PC.html
@@ -95,7 +95,7 @@
   <div class="addressbar draggable"><i class="fa fa-cog"></i><i class="fa fa-"></i><i class="fa fa"></i><span class="divider"></span>
     <input class="edge-url" value=""/>
   </div>
-  <iframe class="edge-browser" src="" frameborder="0" width="100%" height="100%"></iframe>
+  <iframe class="edge-browser" src="settings.html" frameborder="0" width="100%" height="100%"></iframe>
 </div>
 
   
