--- a/PC.html
+++ b/PC.html
@@ -17,7 +17,7 @@
 <div class="desktop"></div>
 <div class="taskbar">
   <div class="programs">
-    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa"></i><img src="https://th.bing.com/th/id/R.b245ecd816b2764fca437ebb8fa4112a?rik=dIssqrrXkMkXIQ&pid=ImgRaw&r=0" style="width:30px; height: 30px;"></div>
+    <div class="icon win" data-target=".startmenu, .icon.win"><i class="fa fa"></i><img src="https://fontmeme.com/permalink/241130/1b5004ba94d1b4eafae1ff4ba9e7e8bc.png" style="width:30px; height: 30px;"></div>
     <div class="icon application minimized settings" data-target=".id-settings">
       <div class="app-preview preview-settings">
     <div class="icon cortana" title="Settings" data-target="#cortana"><i class="fa fa"></i><img src="https://www.elevenforum.com/data/attachments/17/17787-2e9399435abda183d7db56e1855f21b3.jpg" style="width:30px; height: 30px;"></div></div>
