--- a/PC.html
+++ b/PC.html
@@ -9,20 +9,20 @@
 <!-- Want to add in other taskbar functions - working volume etc. And also a restart / start / shutdown animation when I can find the time.-->
 <!-- #Start menu scroll bar not as nice in Firefox / IE - use chrome where possible-->
 <!---->
+<title>OS X</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" />
 <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="style.css">
-<title>OS X</title>	
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css'>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css'>
 <link rel='stylesheet' href='https://codepen.io/jackharner/pen/drONOG.css'><link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <link rel="icon" type="image/x-icon" href="https://pngimg.com/uploads/apple_logo/apple_logo_PNG19671.png">
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="style.css">
 <!-- partial:index.partial.html -->
 <header>
 		<ul class="left">
